--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "https": "^1.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2"
   }
